ARROW-8365: [C++] Error when writing files to S3 larger than 5 GB

The part upload threshold could be bumped too frequently
(on any Write() call, even if it doesn't trigger a part upload).

Report and diagnosis by Juan Galvez (thank you!).

Closes #6864 from pitrou/ARROW-8365-fix-part-upload-threshold

Authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Antoine Pitrou <antoine@python.org>